# promiedos-data-scraping

./: .gitignore  Dockerfile  README.md  crontab.Development  data_analysis.ipynb  data_output_example.html  data_research.ipynb  docker-compose-postgres.yaml  logging.cfg  logging.conf  main.py  main_deprecated.py  pyproject.toml  requirements.txt  start.sh  template.env
app/src/: db_connectors.py  etl.py  exceptions.py  logger.py  migrations.py  models.py  parsers.py  scrapers.py
jobs/: main.py  prueba.py
sql/: create_database.sql  create_table.sql  create_tables.sql  delete_duplicates.sql
