[tool.poetry]
name = "promiedos-data-scraping"
version = "0.1.0"
description = "An ETL process to perform scraping of the promiedos.com website."
authors = ["Juan Ochoa <ochoajuanm.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
requests = "^2.27.1"
SQLAlchemy = "^1.4.36"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.3.0"

[tool.black]
line-length = 100
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
